--- a/index.html
+++ b/index.html
@@ -76,6 +76,42 @@
 
   </div>
 
+  <!-- Modal Trigger 
+  <a class="waves-effect waves-light btn modal-trigger" href="#ready-to-rent-modal">Modal</a>
+  -->
+  <!-- Modal Structure -->
+  <div id="ready-to-rent-modal" class="modal modal-fixed-footer">
+    <div class="modal-content">
+      <h4>Rental</h4>
+      <p>
+        <div class="row">
+          <form class="col s12">
+            <div class="row">
+            <div class="row">
+              <div class="row">
+                <div class="input-field col s12">
+                  <input id="deposit" type="number" class="validate">
+                  <label for="deposit">Deposit</label>
+                </div>
+              </div>
+              <div class="input-field col s12">
+                <input value="0.0" id="amount" type="number" class="validate">
+                <label for="amount">Rental Amount</label>
+              </div>
+            </div>
+            <button class="modal-close btn waves-effect waves-light" type="submit" name="rent">Rent<i class="material-icons right">send</i></button>;
+          </form>
+        </div>
+      </p>
+    </div>
+    <!-- 
+    <div class="modal-footer">
+      
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+  -->
+  </div>
+
   <!-- JQuery 3.4.1 slim minified -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
   <!-- Compiled and minified JavaScript for Materialize CSS -->
